modified index.html and added few divisions

--- a/index.html
+++ b/index.html
@@ -65,11 +65,19 @@
                     <div class="purpose-of-rental-details">
                         <label for="purpose-of-rental">Purpose of Rental: </label>
 
-                        <input type="radio" name="purpose-of-rental" id="business" value="Business">
-                        <label for="html">Business</label>
+                        <div class="rental-options">
+                            <div class="first-option">
+                                <input type="radio" name="purpose-of-rental" id="business" value="Business">
+                                <label for="html">Business</label>
+                            </div>
 
-                        <input type="radio" name="purpose-of-rental" id="rental" value="rental">
-                        <label for="html">Rental</label><br>
+                            <div class="second-option">
+                                <input type="radio" name="purpose-of-rental" id="rental" value="rental">
+                                <label for="html">Rental</label><br>
+                            </div>
+
+                        </div>
+
                     </div>
                     <div class="search-button">
                         <button type="submit">Search</button>
