--- a/index.html
+++ b/index.html
@@ -38,50 +38,49 @@
             <div class="left-section">
                 <h1>Let's find your ideal car</h1>
                 <div class="car-details">
-
-                    <!-- Location Details -->
-                    <div class="location-details">
-                        <label for="locations">Picup Location: </label>
-                        <select name="locations" id="locations">
-                            <option>Select a Location</option>
-                            <option value="bbsr">Bhubaneswar</option>
-                            <option value="ndl">New Delhi</option>
-                        </select>
-                    </div>
-
-                    <!-- Pickup Date Details -->
-                    <div class="picup-date-details">
-                        <label for="picup-date">Picup Date: </label>
-                        <input type="date" name="picup-date" id="picup-date">
-                    </div>
-
-                    <!-- Drop Off Date Details -->
-                    <div class="drop-off-date-details">
-                        <label for="drop-off-date">Drop Off Date: </label>
-                        <input type="date" name="drop-off-date" id="drop-off-date">
-                    </div>
-
-                    <!-- Purpose Of Rental Details -->
-                    <div class="purpose-of-rental-details">
-                        <label for="purpose-of-rental">Purpose of Rental: </label>
-
-                        <div class="rental-options">
-                            <div class="first-option">
-                                <input type="radio" name="purpose-of-rental" id="business" value="Business">
-                                <label for="html">Business</label>
-                            </div>
-
-                            <div class="second-option">
-                                <input type="radio" name="purpose-of-rental" id="rental" value="rental">
-                                <label for="html">Rental</label><br>
-                            </div>
-
+                    <form action="#">
+                        <!-- Location Details -->
+                        <div class="location-details">
+                            <label for="locations">Picup Location: </label>
+                            <select name="locations" id="locations">
+                                <option>Select a Location</option>
+                                <option value="bbsr">Bhubaneswar</option>
+                                <option value="ndl">New Delhi</option>
+                            </select>
                         </div>
 
-                    </div>
-                    <div class="search-button">
-                        <button type="submit">Search</button>
-                    </div>
+                        <!-- Pickup Date Details -->
+                        <div class="picup-date-details">
+                            <label for="picup-date">Picup Date: </label>
+                            <input type="date" name="picup-date" id="picup-date">
+                        </div>
+
+                        <!-- Drop Off Date Details -->
+                        <div class="drop-off-date-details">
+                            <label for="drop-off-date">Drop Off Date: </label>
+                            <input type="date" name="drop-off-date" id="drop-off-date">
+                        </div>
+
+                        <!-- Purpose Of Rental Details -->
+                        <div class="purpose-of-rental-details">
+                            <label for="purpose-of-rental">Purpose of Rental: </label>
+
+                            <div class="rental-options">
+                                <div class="first-option">
+                                    <input type="radio" name="purpose-of-rental" id="business" value="Business">
+                                    <label for="html">Business</label>
+                                </div>
+
+                                <div class="second-option">
+                                    <input type="radio" name="purpose-of-rental" id="rental" value="rental">
+                                    <label for="html">Rental</label><br>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="search-button">
+                            <button type="submit">Search</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="right-section">
