--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             <div class="nav-menu-items">
                 <nav>
-                    <li>Signup</li>
-                    <li>Login</li>
+                    <li><a href="/signup.html">Signup</a></li>
+                    <li><a href="/login.html">Login</a></li>
                     <li>Manage Booking</li>
                     <li>Popular Locations</li>
                 </nav>
