modified signup page layout and styling

--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="signup-button">
-                        <button type="submit">Signup</button>
+                        <button type="submit"><a href="login.html">Signup</a> </button>
                     </div>
                 </form>
             </div>
