added onclick event on signup button i.e clicking on signup redirects to login page

--- a/signup.html
+++ b/signup.html
@@ -60,13 +60,14 @@
                     </div>
 
                     <div class="signup-button">
-                        <button type="submit"><a href="login.html">Signup</a> </button>
+                        <button type="submit" id="sign-up" onclick="login_page()">Signup</button>
                     </div>
                 </form>
             </div>
         </div>
 
     </div>
+    <script src="JS/signup.js"></script>
 </body>
 
 </html>
