added onclick event on login button i.e clicking on login redirects to home page

--- a/login.html
+++ b/login.html
@@ -49,13 +49,14 @@
                     </div>
 
                     <div class="login-button">
-                        <button type="submit">Login</button>
+                        <button type="submit" onclick="home_page()">Login</button>
                     </div>
                 </form>
             </div>
         </div>
 
     </div>
+    <script src="JS/login.js"></script>
 </body>
 
 </html>
