modified index.html and changed layout for about us section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
         <div class="more-info-section">
             <div class="left-section">
-                <h1>Let's find your ideal car</h1>
+                <div class="left-section-header">
+                    <h1>Let's find your ideal car</h1>
+                </div>
                 <div class="car-details">
                     <form action="#">
                         <!-- Location Details -->
@@ -94,7 +96,9 @@
                 </div>
             </div>
             <div class="right-section">
-                <h1>Our Most Popular Destinations</h1>
+                <div class="right-section-header">
+                    <h1>Our Most Popular Destinations</h1>
+                </div>
                 <div class="popular-destinations">
                     <span>Bangalore</span>
                     <span>Noida</span>
@@ -105,10 +109,12 @@
         </div>
 
         <div class="about-us-section">
-            <h1>About Us</h1>
+            <div class="about-us-header">
+                <h1>About Us</h1>
+            </div>
             <div class="about-us-container">
                 <div class="company-logo">
-                    <img src="/images/car-rental-logo.jpg" alt="company-logo">
+                    <img src="/images/car-rental-company-logo.jpeg" alt="company-logo">
                 </div>
                 <div class="team-members">
                     <div class="team-member-header">
