Changed members Name

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea possimus veniam odio dolor, quas officia repellat beatae quae inventore iusto ab eum quo odit quod est.</p>
                         </div>
                         <div class="team-member-2">
-                            <h1>- Prashant</h1>
+                            <h1>- Prashant Singh</h1>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea possimus veniam odio dolor, quas officia repellat beatae quae inventore iusto ab eum quo odit quod est.</p>
                         </div>
                         <div class="team-member-3">
-                            <h1>- Jhea</h1>
+                            <h1>- Jhea Jaideep</h1>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea possimus veniam odio dolor, quas officia repellat beatae quae inventore iusto ab eum quo odit quod est.</p>
                         </div>
                     </div>
