added footer section in landing page

--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@
             </div>
 
         </div>
+
+        <div class="footer-section">
+            <div class="footer-copyright">
+                <h1>©2022 Car Rental Platform All Rights Reserved</h1>
+            </div>
+            <div class="footer-contents">
+                <li>Contact Us</li>
+                <li>Support</li>
+                <li>T&C</li>
+            </div>
+        </div>
     </div>
 </body>
 
