Added Contact Form

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h1>©2022 Car Rental Platform All Rights Reserved</h1>
             </div>
             <div class="footer-contents">
-                <li>Contact Us</li>
+                <li> <a href="contact_form.html">Contact Us</a></li>
                 <li>Support</li>
                 <li>T&C</li>
             </div>
