--- a/index.html
+++ b/index.html
@@ -146,12 +146,11 @@
                 <h1>©2022 Car Rental Platform All Rights Reserved</h1>
             </div>
             <div class="footer-contents">
-                <li> <a href="contacts.html">Contact Us</a></li>
+                <li> <a href="contact_form.html" target="_blank" >Contact Us</a></li>
                 <li>Support</li>
                 <li>T&C</li>
             </div>
         </div>
     </div>
 </body>
-
 </html>
